--- a/www/_index.html
+++ b/www/_index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <meta charset=utf-8 />
 <script src="https://samizdat.cz/tools/d3/3.5.3.min.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light+Two&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="screen.css">
 <title>platy-ucitelu</title>
 <p id='fallback'>Váš prohlížeč je bohužel zastaralý a nepodporuje interaktivní vizualizace. Doporučujeme jej aktualizovat nebo <a target="_blank" href="http://www.browserchoice.eu/">stáhnout jiný</a></p>
+<div class="ig chalkboard pupil-count" data-ig='pupil-count'></div>
 <script src="script.js" charset="utf-8" async></script>
