pridano jezditko na prumerny platy

--- a/www/_index.html
+++ b/www/_index.html
@@ -5,5 +5,6 @@
 <link rel="stylesheet" href="screen.css">
 <title>platy-ucitelu</title>
 <p id='fallback'>Váš prohlížeč je bohužel zastaralý a nepodporuje interaktivní vizualizace. Doporučujeme jej aktualizovat nebo <a target="_blank" href="http://www.browserchoice.eu/">stáhnout jiný</a></p>
-<div class="ig chalkboard pupil-count" data-ig='pupil-count'></div>
+<!-- <div class="ig chalkboard pupil-count" data-ig='pupil-count'></div> -->
+<div class="ig chalkboard money" data-ig='money'></div>
 <script src="script.js" charset="utf-8" async></script>
